--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -3,6 +3,7 @@
     <color name="primaryColor">#334257</color>
     <color name="primaryLightColor">#5e6d84</color>
     <color name="primaryDarkColor">#0a1c2e</color>
+    <color name="primaryContent">#548CA8</color>
     <color name="secondaryColor">#476072</color>
     <color name="secondaryLightColor">#748da1</color>
     <color name="secondaryDarkColor">#1c3647</color>
