--- a/app/src/main/res/layout/component_thread.xml
+++ b/app/src/main/res/layout/component_thread.xml
@@ -23,8 +23,7 @@
             <ImageButton
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:src="@drawable/ic_upvote"
-                />
+                android:src="@drawable/ic_upvote" />
 
             <TextView
                 android:layout_width="wrap_content"
@@ -34,8 +33,7 @@
             <ImageButton
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:src="@drawable/ic_downvote"
-                />
+                android:src="@drawable/ic_downvote" />
 
         </LinearLayout>
 
