--- a/app/src/main/res/layout/activity_create_thread_page.xml
+++ b/app/src/main/res/layout/activity_create_thread_page.xml
@@ -22,11 +22,12 @@
             android:src="@drawable/ic_close" />
 
         <Button
+            android:id="@+id/btnPost"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            android:layout_alignParentRight="true"
             android:text="Post"
-            android:textAllCaps="false"
-            android:layout_alignParentRight="true"/>
+            android:textAllCaps="false" />
 
     </RelativeLayout>
 
@@ -51,6 +52,7 @@
             app:avatarViewShape="circle" />
 
         <EditText
+            android:id="@+id/etThreadBody"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:hint="What's happening?"
