--- a/app/src/main/res/layout/activity_create_thread_page.xml
+++ b/app/src/main/res/layout/activity_create_thread_page.xml
@@ -5,7 +5,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".CreateThreadPage"
+    tools:context=".pages.CreateThreadPage"
     android:paddingHorizontal="20dp"
     android:paddingVertical="10dp"
     android:orientation="vertical">
