--- a/app/src/main/res/layout/card_thread.xml
+++ b/app/src/main/res/layout/card_thread.xml
@@ -21,6 +21,7 @@
                 android:gravity="center">
 
                 <io.getstream.avatarview.AvatarView
+                    android:id="@+id/avUser"
                     android:layout_width="50dp"
                     android:layout_height="50dp"
                     android:src="@drawable/cat_user"
@@ -42,11 +43,13 @@
                     android:gravity="center_vertical">
 
                     <TextView
+                        android:id="@+id/tvUsername"
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
                         android:text="@string/username" />
 
                     <TextView
+                        android:id="@+id/tvCreatedAt"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:text="@string/created_at"/>
@@ -56,6 +59,7 @@
             </LinearLayout>
 
             <TextView
+                android:id="@+id/tvThreadBody"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:text="@string/lorem"/>
@@ -69,21 +73,25 @@
         android:gravity="center_vertical">
 
         <ImageButton
+            android:id="@+id/btnUpvote"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:src="@drawable/ic_upvote"/>
 
         <TextView
+            android:id="@+id/tvTotalVotes"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="@string/upvotes" />
 
         <ImageButton
+            android:id="@+id/btnDownvote"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:src="@drawable/ic_downvote"/>
 
         <ImageButton
+            android:id="btnComment"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:src="@drawable/ic_comment" />
