--- a/app/src/main/res/layout/card_thread.xml
+++ b/app/src/main/res/layout/card_thread.xml
@@ -91,7 +91,7 @@
             android:src="@drawable/ic_downvote"/>
 
         <ImageButton
-            android:id="btnComment"
+            android:id="@+id/btnComment"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:src="@drawable/ic_comment" />
