--- a/app/src/main/res/layout/card_thread.xml
+++ b/app/src/main/res/layout/card_thread.xml
@@ -8,7 +8,8 @@
     android:layout_height="wrap_content"
     android:orientation="vertical"
     android:padding="10dp"
-    android:background="#F5F5F5">
+    android:background="#F5F5F5"
+    android:layout_marginTop="20dp">
 
         <LinearLayout
             android:layout_width="match_parent"
