navigation bar done

--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -9,4 +9,7 @@
     <color name="secondaryDarkColor">#1c3647</color>
     <color name="primaryTextColor">#eeeeee</color>
     <color name="secondaryTextColor">#eeeeee</color>
+    <color name="icon_unselected">#828282</color>
 </resources>
+
+    <!--    https://m2.material.io/resources/color/#!/?view.left=0&view.right=1&primary.color=334257&primary.text.color=EEEEEE&secondary.color=476072&secondary.text.color=ffffff-->
