--- a/app/src/main/res/layout/fragment_thread.xml
+++ b/app/src/main/res/layout/fragment_thread.xml
@@ -1,13 +1,20 @@
 <?xml version="1.0" encoding="utf-8"?>
-<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout
+    xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
-    android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".fragments.ThreadFragment">
+    android:layout_width="match_parent"
+    android:orientation="vertical"
+    android:background="#E1E1E1"
+    android:paddingHorizontal="20dp"
+    android:paddingVertical="0dp">
 
-    <TextView
+    <androidx.recyclerview.widget.RecyclerView
+        android:id="@+id/rvThread"
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:text="thread frag" />
+        android:layout_height="match_parent">
 
-</FrameLayout>
+    </androidx.recyclerview.widget.RecyclerView>
+
+</LinearLayout>
