--- a/app/src/main/res/layout/fragment_add.xml
+++ b/app/src/main/res/layout/fragment_add.xml
@@ -1,13 +1,23 @@
 <?xml version="1.0" encoding="utf-8"?>
-<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".fragments.AddFragment">
+    tools:context=".fragments.AddFragment"
+    android:orientation="vertical"
+    android:gravity="center">
 
-    <TextView
-        android:layout_width="match_parent"
+    <VideoView
+        android:id="@+id/videoView"
+        android:layout_width="wrap_content"
         android:layout_height="match_parent"
-        android:text="add frag" />
+        android:layout_weight="1"/>
 
-</FrameLayout>
+    <Button
+        android:id="@+id/button2"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="Button"
+        android:layout_gravity="bottom|center"/>
+
+</LinearLayout>
