--- a/app/src/main/res/layout/fragment_notification.xml
+++ b/app/src/main/res/layout/fragment_notification.xml
@@ -8,6 +8,12 @@
     android:orientation="vertical"
     android:paddingHorizontal="20dp">
 
+    <include layout="@layout/section_activity" />
+    
+    <Space
+        android:layout_width="0dp"
+        android:layout_height="40dp" />
 
+    <include layout="@layout/section_new_followers" />
 
 </LinearLayout>
