--- a/app/src/main/res/layout/section_new_followers.xml
+++ b/app/src/main/res/layout/section_new_followers.xml
@@ -13,8 +13,16 @@
         android:text="@string/followers_title"
         android:textSize="20sp"/>
 
-    <include layout="@layout/card_follow_notification" />
-    <include layout="@layout/card_follow_notification" />
-    <include layout="@layout/card_follow_notification" />
+    <androidx.recyclerview.widget.RecyclerView
+        android:id="@+id/rvNotificationFollowers"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:paddingHorizontal="0dp">
+
+    </androidx.recyclerview.widget.RecyclerView>
+
+<!--    <include layout="@layout/card_follow_notification" />-->
+<!--    <include layout="@layout/card_follow_notification" />-->
+<!--    <include layout="@layout/card_follow_notification" />-->
 
 </LinearLayout>
