notif fragment implementing all rv notifications

--- a/app/src/main/res/layout/fragment_notification.xml
+++ b/app/src/main/res/layout/fragment_notification.xml
@@ -8,12 +8,42 @@
     android:orientation="vertical"
     android:paddingHorizontal="20dp">
 
-    <include layout="@layout/section_activity" />
-    
+<!--    <include layout="@layout/section_activity" />-->
+
+    <TextView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="@string/activities_title"
+        android:textSize="20sp"/>
+
+    <androidx.recyclerview.widget.RecyclerView
+        android:id="@+id/rvNotificationActivities"
+        android:layout_width="match_parent"
+        android:layout_height="0dp"
+        android:layout_weight="1"
+        android:paddingHorizontal="0dp">
+
+    </androidx.recyclerview.widget.RecyclerView>
+
     <Space
         android:layout_width="match_parent"
         android:layout_height="40dp" />
 
-    <include layout="@layout/section_new_followers" />
+<!--    <include layout="@layout/section_new_followers" />-->
+
+    <TextView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="@string/followers_title"
+        android:textSize="20sp"/>
+
+    <androidx.recyclerview.widget.RecyclerView
+        android:id="@+id/rvNotificationFollowers"
+        android:layout_width="match_parent"
+        android:layout_height="0dp"
+        android:layout_weight="1"
+        android:paddingHorizontal="0dp">
+
+    </androidx.recyclerview.widget.RecyclerView>
 
 </LinearLayout>
