edit thread button

--- a/app/src/main/res/layout/card_thread.xml
+++ b/app/src/main/res/layout/card_thread.xml
@@ -39,8 +39,9 @@
                     app:avatarViewShape="circle" />
 
                 <LinearLayout
-                    android:layout_width="match_parent"
+                    android:layout_width="0dp"
                     android:layout_height="match_parent"
+                    android:layout_weight="1"
                     android:orientation="vertical"
                     android:gravity="center_vertical">
 
@@ -57,6 +58,12 @@
                         android:text="@string/created_at"/>
 
                 </LinearLayout>
+
+                <ImageButton
+                    android:id="@+id/btnEdit"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:src="@drawable/ic_baseline_edit_24"/>
 
             </LinearLayout>
 
