--- a/app/src/main/res/layout/activity_profile_page.xml
+++ b/app/src/main/res/layout/activity_profile_page.xml
@@ -26,12 +26,12 @@
                 />
 
             <ImageView
-                android:id="@+id/recentFollowerBtn"
+                android:id="@+id/profileMenu"
                 android:layout_marginEnd="10dp"
                 android:layout_gravity="end"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:src="@drawable/ic_baseline_people_alt_24"
+                android:src="@drawable/ic_baseline_menu_24"
                 />
 
         </androidx.appcompat.widget.Toolbar>
