--- a/app/src/main/res/layout/activity_post_video_page.xml
+++ b/app/src/main/res/layout/activity_post_video_page.xml
@@ -33,7 +33,8 @@
             android:textSize="18sp"
             android:textFontWeight="900"
             android:inputType="text"
-            android:importantForAutofill="no" />
+            android:importantForAutofill="no"
+            android:textColor="@color/secondaryTextColor"/>
 
     </androidx.constraintlayout.widget.ConstraintLayout>
 
